--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -7,10 +7,10 @@ on:
     types: [started]
     
 env:              
-  ROM_URL: https://dl.google.com/developers/android/sc/images/ota/redfin-ota-spp2.210219.008-3d61e529.zip
-  ZIP_NAME: test.zip
-  OS_TYPE: Pixel
-  BUILD_TYPE: 'ab'
+  ROM_URL: https://www.coolapk.com/link?url=https%3A%2F%2Fdownload.meizu.com%2FFirmware%2FFlyme%2F16s_Pro%2F9.21.4.24%2Fcn_daily%2F20210424183833%2F68d12461%2Fupdate.zip
+  ZIP_NAME: update.zip
+  OS_TYPE: flyme
+  BUILD_TYPE: 'a-only'
   REPACK_NAME: test_action.zip
   VERSION: 12
   upload_WeTransfer: 'true'
