--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -9,7 +9,7 @@ on:
 env:              
   ROM_URL: https://www.coolapk.com/link?url=https%3A%2F%2Fdownload.meizu.com%2FFirmware%2FFlyme%2F16s_Pro%2F9.21.4.24%2Fcn_daily%2F20210424183833%2F68d12461%2Fupdate.zip
   ZIP_NAME: update.zip
-  OS_TYPE: flyme
+  OS_TYPE: Generic
   BUILD_TYPE: 'ab'
   REPACK_NAME: test.zip
   VERSION: 12
